feat: Criar upload de arquivos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
+# Configuração S3
+
+gestur.storage.s3.id-chave-acesso=${AWS_ACCESS_KEY_ID}
+gestur.storage.s3.chave-acesso-secreta=${AWS_SECRET_ACCESS_KEY}
+gestur.storage.s3.bucket=gestur
+gestur.storage.s3.regiao=us-east-1
+gestur.storage.s3.diretorio-fotos=anexos
