Fazer deploy da aplicação no fly.io em desenvolvimento

--- a/src/main/resources/application-developer.properties
+++ b/src/main/resources/application-developer.properties
@@ -1,9 +1,9 @@
 spring.application.name=gestur
 server.port=3001
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestur_db
+spring.datasource.username=gestur_user
+spring.datasource.password=gestur_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
