Criar upload de arquivo para cliente

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,11 +6,12 @@ spring.datasource.username=gestur_user
 spring.datasource.password=gestur_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 gestur.storage.s3.id-chave-acesso=${AWS_ACCESS_KEY_ID}
 gestur.storage.s3.chave-acesso-secreta=${AWS_SECRET_ACCESS_KEY}
 gestur.storage.s3.bucket=gestur
 gestur.storage.s3.regiao=us-east-1
 gestur.storage.s3.diretorio-fotos=anexos
+
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
