--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 spring.application.name=gestur
-server.port=3001
+server.port=8080
 
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 gestur.storage.s3.id-chave-acesso=${AWS_ACCESS_KEY_ID}
 gestur.storage.s3.chave-acesso-secreta=${AWS_SECRET_ACCESS_KEY}
 gestur.storage.s3.bucket=gestur
 gestur.storage.s3.regiao=us-east-1
 gestur.storage.s3.diretorio-fotos=anexos
+
+spring.flyway.locations=classpath:db/migration
