--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,5 @@ gestur.storage.s3.regiao=us-east-1
 gestur.storage.s3.diretorio-fotos=anexos
 
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
+api.security.token.secret=token_super_secreto_12345
