--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ gestur.storage.s3.regiao=us-east-1
 gestur.storage.s3.diretorio-fotos=anexos
 
 spring.flyway.locations=classpath:db/migration
+
+api.security.token.secret=${JWT_TOKEN_SECRET}
