refactor: jwt authentication

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,4 +16,10 @@ gestur.storage.s3.diretorio-fotos=anexos
 
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
-api.security.token.secret=token_super_secreto_12345
+security.jwt.token.secret=token_super_secreto_12345
+
+security.jwt.token.time=3600000
+
+
+cors.originPatterns=http://localhost:3001
+
