--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,8 @@ gestur.storage.s3.diretorio-fotos=anexos
 
 spring.flyway.locations=classpath:db/migration
 
-api.security.token.secret=${JWT_TOKEN_SECRET}
+security.jwt.token.secret=token_super_secreto_12345
+
+security.jwt.token.time=3600000
+
+cors.originPatterns=http://localhost:3001
